--- a/Simbolos.html
+++ b/Simbolos.html
@@ -18,7 +18,7 @@
     <div class="tema">
       <section id="inicio"></section>
       <h1>Escudo de Armas</h1>
-      <img class="simbolos" src="/Proyecto/Imagenes/esc.jpg" alt="Escudo de Armas">
+      <img class="simbolos" src="Imagenes/esc.jpg" alt="Escudo de Armas">
     </div>
     <div class="contenido">
       <p style="text-align: justify;">
@@ -31,7 +31,7 @@
   <div class="contenedor-flex">
     <div class="tema">
       <h1>Bandera Nacional</h1>
-      <img class="simbolos" src="/Proyecto/Imagenes/BAN.jpg" alt="Bandera de Guatemala">
+      <img class="simbolos" src="Imagenes/BAN.jpg" alt="Bandera de Guatemala">
     </div>
     <div class="contenido">
       <p style="text-align: justify;">
@@ -44,7 +44,7 @@
   <div class="contenedor-flex">
     <div class="tema">
       <h1>El Quetzal</h1>
-      <img class="simbolos" src="/Proyecto/Imagenes/quet.jpg" alt="El Quetzal">
+      <img class="simbolos" src="Imagenes/Quetzal01.jpg" alt="El Quetzal">
     </div>
     <div class="contenido">
       <p style="text-align: justify;">
@@ -56,7 +56,7 @@
   <div class="contenedor-flex">
     <div class="tema">
       <h1>La Ceiba</h1>
-      <img class="simbolos" src="Proyecto/Imagenes/cei.jpg" alt="La Ceiba">
+      <img class="simbolos" src="Imagenes/ceiba.jpeg" alt="La Ceiba">
     </div>
     <div class="contenido">
       <p style="text-align: justify;">
@@ -68,7 +68,7 @@
   <div class="contenedor-flex">
     <div class="tema">
       <h1>La Marimba</h1>
-      <img class="simbolos" src="/Proyecto/Imagenes/marim.jpg" alt="La Marimba">
+      <img class="simbolos" src="Imagenes/marim.jpg" alt="La Marimba">
     </div>
     <div class="contenido">
       <p style="text-align: justify;">
@@ -80,7 +80,7 @@
   <div class="contenedor-flex">
     <div class="tema">
       <h1>La Monja Blanca</h1>
-      <img class="simbolos" src="/Proyecto/Imagenes/mon.jpg" alt="La Monja Blanca">
+      <img class="simbolos" src="Imagenes/mon.jpg" alt="La Monja Blanca">
     </div>
     <div class="contenido">
       <p style="text-align: justify;">
@@ -92,7 +92,7 @@
   <div class="contenedor-flex">
     <div class="tema">
       <h1>Tecún Umán</h1>
-      <img class="simbolos" src="/Proyecto/Imagenes/tec.jpg" alt="Tecún Umán">
+      <img class="simbolos" src="Imagenes/tec.jpg" alt="Tecún Umán">
     </div>
     <div class="contenido">
       <p style="text-align: justify;">
@@ -104,7 +104,7 @@
 <div class="contenedor-flex">
     <div class="tema">
       <h1>Himno Nacional</h1>
-      <img class="simbolos" src="/Proyecto/Imagenes/him.jpg" alt="Himno Nacional">
+      <img class="simbolos" src="Imagenes/him.jpg" alt="Himno Nacional">
     </div>
     <div class="contenido">
       <p style="text-align: justify;">
@@ -112,7 +112,8 @@
       </p>
     </div>
   </div>
-  <p class="regresar"><a href="/Proyecto/index.html">Regresar</a></p>
+    </div>
+  <p class="regresar"><a href="index.html">Regresar</a></p>
 
     <footer><p>&copy; 2025, 'Proyecto final, 5to Bachillerato del Liceo Elohim' </p></footer>
 
