--- a/Expresiones.html
+++ b/Expresiones.html
@@ -235,7 +235,8 @@
   </div>
 
   <footer><p>&copy; 2025, Oliver Lucero</p></footer>
-   <p class="regresar"><a href="/Proyecto/index.html">Regresar</a></p>
+    </div>
+  <p class="regresar"><a href="index.html">Regresar</a></p>
       <footer><p>&copy; 2025, 'Proyecto final, 5to Bachillerato del Liceo Elohim' </p></footer>
      </div>
 
