--- a/Historia.html
+++ b/Historia.html
@@ -166,7 +166,8 @@ Esta violación de derechos humanos, económicos y sociales por parte de las dic
   <!-- fin de la estructura -->
 
    <footer><p>&copy; 2025, Jesus Churup</p></footer>
-   <p class="regresar"><a href="/Proyecto/index.html">Regresar</a></p>
+   </div>
+  <p class="regresar"><a href="index.html">Regresar</a></p>
       <footer><p>&copy; 2025, 'Proyecto final, 5to Bachillerato del Liceo Elohim' </p></footer>
      </div>
 </body>
