--- a/Nosotros.html
+++ b/Nosotros.html
@@ -10,7 +10,7 @@
     <nav>
     <div class="background-elemnts"></div>
     <div class="nav-links">
-    <a href="/Proyecto/index.html">Inicio</a>
+    <a href="index.html">Inicio</a>
     </div>
  
     </nav><br><br><br><br><br><br>
@@ -39,3 +39,4 @@
         <strong>Eber Monroy:</strong> Estudiar todo lo necesario para alcanzarlo, las carreras correspondientes  y de averiguar cuales son mis oportunidades. <br>
         <strong>Luis Grajeda:</strong> Ser un profesional de confianza en tecnología que ayude a las empresas a crecer y a ser más eficientes en el futuro. <br>
         <strong>Anderson Hernandez:</strong> Lograr todos mis objetivos, con esta página dando el primer paso para empezar a lograr todo lo que me propuse. <br>
+  </div>
