--- a/Pueblos.html
+++ b/Pueblos.html
@@ -63,7 +63,8 @@
        Este Pueblo es el resultado de la desendencia entre españoles, indigeneas y afroamericamos, a los cuales desde el S. XVI se les empezo a llamas "Ladinos"
        esta cultira tuvo gran categoria dentro de la Sociedad aun siendo mestizos, actualmente es muy reconocida por su religion, costumbres, ocupaciones, idioma y su deliciosa gastronomia.
       </p>
-      <p class="regresar"><a href="/Proyecto/index.html">Regresar</a></p>
+  </div>
+  <p class="regresar"><a href="index.html">Regresar</a></p>
       <footer><p>&copy; 2025, 'Proyecto final, 5to Bachillerato del Liceo Elohim' </p></footer>
      </div>
 </div>
