--- a/datos.html
+++ b/datos.html
@@ -102,7 +102,8 @@
   <footer>
     <p>© 2025 Historia y Cultura de Guatemala</p>
   </footer>
-   <p class="regresar"><a href="/Proyecto/index.html">Regresar</a></p>
+  </div>
+  <p class="regresar"><a href="index.html">Regresar</a></p>
       <footer><p>&copy; 2025, 'Proyecto final, 5to Bachillerato del Liceo Elohim' </p></footer>
      </div>
 </body>
