--- a/teatro.html
+++ b/teatro.html
@@ -133,6 +133,7 @@
 <footer>
         <p>&copy; 2025, Genesis Garcia</p>
 </footer> 
-<p class="regresar"><a href="/Proyecto/index.html">Regresar</a></p>
+  </div>
+  <p class="regresar"><a href="index.html">Regresar</a></p>
 </body>
 </html>
