--- a/tradiciones.html
+++ b/tradiciones.html
@@ -77,7 +77,8 @@
       <p style="text-align: justify;"> 
         Este emblematico evento fue iniciado por estudiantes de la Universidad de San Carlos de Guatemala en 1898,  este maravilloso desfile surgió como una forma de expresar su descontento con una protesta contra el presidente Manuel Estrada Cabrera, al cual se le acusaba de perpetuar una dictadura tras gobernar por 22 años en el poder. Esta expresión festiva y crítica marcó el nacimiento de la Huelga de Dolores.
       </p>
-       <p class="regresar"><a href="/Proyecto/index.html">Regresar</a></p>
+  </div>
+  <p class="regresar"><a href="index.html">Regresar</a></p>
   </div>
 </body>
 </html>
