--- a/Vestimenta.html
+++ b/Vestimenta.html
@@ -289,7 +289,7 @@
       </p>
     </div>
   </div>
-  <p class="regresar"><a href="/Proyecto/index.html">Regresar</a></p>
+  <p class="regresar"><a href="index.html">Regresar</a></p>
        <footer><p>&copy; 2025, 'Proyecto final, 5to Bachillerato del Liceo Elohim' </p></footer>
 </body>
 </html>
