--- a/comida.html
+++ b/comida.html
@@ -70,7 +70,7 @@
    <div class="contenedor-flex">
     <div class="tema">
       <h1>Pollo En Amarillo</h1> 
-      <img class="antigua" src="/img/pollo.jpg" alt=""> 
+      <img class="antigua" src="Imagenes/" alt=""> 
     </div>
 
     <div class="contenido">
@@ -96,7 +96,8 @@
   </div>
  
 
-      <p class="regresar"><a href="/Proyecto/index.html">Regresar</a></p>
+  </div>
+  <p class="regresar"><a href="index.html">Regresar</a></p>
       <footer><p>&copy; 2025, 'Proyecto final, 5to Bachillerato del Liceo Elohim' </p></footer>
      </div>
 
