--- a/Simbolos.html
+++ b/Simbolos.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Símbolos Patrios</title>
-  <link rel="stylesheet" href="CSS/Escudo.cssS">
+  <link rel="stylesheet" href="CSS/Escudo.css">
 </head>
 <body>
        
